// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentSwitcher default 1`] = `
<div
  className="content-switcher tag-ds"
>
  <div
    className="content-switcher-items"
  >
    <button
      className="content-switcher-item-button active"
      data-testid="item1"
      id="item1"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-title"
      >
        Tab 1
      </span>
    </button>
    <button
      className="content-switcher-item-button "
      data-testid="item2"
      id="item2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-title"
      >
        Tab 2
      </span>
    </button>
    <button
      className="content-switcher-item-button "
      data-testid="item3"
      id="item3"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-icon"
      >
        <span
          className="material-icons"
        >
          fire
        </span>
      </span>
      <span
        className="content-switcher-item-title"
      >
        Tab 3
      </span>
    </button>
    <button
      className="content-switcher-item-button "
      data-testid="item4"
      id="item4"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-title"
      >
        Tab 4
      </span>
      <span
        className="badge"
      >
        9
      </span>
    </button>
  </div>
  <div
    className="content-switcher-item-content"
    data-testid="item1-content"
    id="item1-content"
    title="Tab 1"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur saepe doloribus nisi quis consectetur numquam blanditiis accusamus dolor ipsam aspernatur aperiam aut accusantium, itaque quasi magni enim exercitationem repellat? Obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
    </p>
  </div>
</div>
`;

exports[`ContentSwitcher default with unique child 1`] = `
<div
  className="content-switcher "
>
  <div
    className="content-switcher-items"
  >
    <button
      className="content-switcher-item-button active"
      data-testid="tab1"
      id="tab1"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-title"
      >
        Tab 1
      </span>
    </button>
  </div>
  <div
    className="content-switcher-item-content"
    data-testid="tab1-content"
    id="tab1-content"
    title="Tab 1"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur saepe doloribus nisi quis consectetur numquam blanditiis accusamus dolor ipsam aspernatur aperiam aut accusantium, itaque quasi magni enim exercitationem repellat? Obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
    </p>
  </div>
</div>
`;

exports[`ContentSwitcher default without test ids 1`] = `
<div
  className="content-switcher "
>
  <div
    className="content-switcher-items"
  >
    <button
      className="content-switcher-item-button active"
      id="tab1"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-title"
      >
        Tab 1
      </span>
    </button>
  </div>
  <div
    className="content-switcher-item-content"
    id="tab1-content"
    title="Tab 1"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur saepe doloribus nisi quis consectetur numquam blanditiis accusamus dolor ipsam aspernatur aperiam aut accusantium, itaque quasi magni enim exercitationem repellat? Obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
    </p>
  </div>
</div>
`;

exports[`ContentSwitcher small 1`] = `
<div
  className="content-switcher tag-ds"
>
  <div
    className="content-switcher-items_small"
  >
    <button
      className="content-switcher-item-button active"
      data-testid="item1"
      id="item1"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-title"
      >
        Tab 1
      </span>
    </button>
    <button
      className="content-switcher-item-button "
      data-testid="item2"
      id="item2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-title"
      >
        Tab 2
      </span>
    </button>
    <button
      className="content-switcher-item-button "
      data-testid="item3"
      id="item3"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-icon"
      >
        <span
          className="material-icons"
        >
          fire
        </span>
      </span>
      <span
        className="content-switcher-item-title"
      >
        Tab 3
      </span>
    </button>
    <button
      className="content-switcher-item-button "
      data-testid="item4"
      id="item4"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-title"
      >
        Tab 4
      </span>
      <span
        className="badge_empty"
      />
    </button>
  </div>
  <div
    className="content-switcher-item-content"
    data-testid="item1-content"
    id="item1-content"
    title="Tab 1"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur saepe doloribus nisi quis consectetur numquam blanditiis accusamus dolor ipsam aspernatur aperiam aut accusantium, itaque quasi magni enim exercitationem repellat? Obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
    </p>
  </div>
</div>
`;

exports[`ContentSwitcher small with dividers 1`] = `
<div
  className="content-switcher tag-ds"
>
  <div
    className="content-switcher-items_small_divider"
  >
    <button
      className="content-switcher-item-button active"
      data-testid="item1"
      id="item1"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-title"
      >
        Tab 1
      </span>
    </button>
    <button
      className="content-switcher-item-button "
      data-testid="item2"
      id="item2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-title"
      >
        Tab 2
      </span>
    </button>
    <button
      className="content-switcher-item-button "
      data-testid="item3"
      id="item3"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-icon"
      >
        <span
          className="material-icons"
        >
          fire
        </span>
      </span>
      <span
        className="content-switcher-item-title"
      >
        Tab 3
      </span>
    </button>
    <button
      className="content-switcher-item-button "
      data-testid="item4"
      id="item4"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-title"
      >
        Tab 4
      </span>
      <span
        className="badge_empty"
      />
    </button>
  </div>
  <div
    className="content-switcher-item-content"
    data-testid="item1-content"
    id="item1-content"
    title="Tab 1"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur saepe doloribus nisi quis consectetur numquam blanditiis accusamus dolor ipsam aspernatur aperiam aut accusantium, itaque quasi magni enim exercitationem repellat? Obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
    </p>
  </div>
</div>
`;

exports[`ContentSwitcher with dividers 1`] = `
<div
  className="content-switcher tag-ds"
>
  <div
    className="content-switcher-items_divider"
  >
    <button
      className="content-switcher-item-button active"
      data-testid="item1"
      id="item1"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-title"
      >
        Tab 1
      </span>
    </button>
    <button
      className="content-switcher-item-button "
      data-testid="item2"
      id="item2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-title"
      >
        Tab 2
      </span>
    </button>
    <button
      className="content-switcher-item-button "
      data-testid="item3"
      id="item3"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-icon"
      >
        <span
          className="material-icons"
        >
          fire
        </span>
      </span>
      <span
        className="content-switcher-item-title"
      >
        Tab 3
      </span>
    </button>
    <button
      className="content-switcher-item-button "
      data-testid="item4"
      id="item4"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content-switcher-item-title"
      >
        Tab 4
      </span>
      <span
        className="badge"
      >
        9
      </span>
    </button>
  </div>
  <div
    className="content-switcher-item-content"
    data-testid="item1-content"
    id="item1-content"
    title="Tab 1"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur saepe doloribus nisi quis consectetur numquam blanditiis accusamus dolor ipsam aspernatur aperiam aut accusantium, itaque quasi magni enim exercitationem repellat? Obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
    </p>
  </div>
</div>
`;

exports[`ContentSwitcher with invalid children 1`] = `
<div
  className="content-switcher "
>
  <div
    className="content-switcher-items"
  />
  <div
    active={true}
    id="undefined-content"
  >
    Invalid child
  </div>
</div>
`;

exports[`ContentSwitcher without children 1`] = `
<div
  className="content-switcher "
>
  <div
    className="content-switcher-items"
  />
</div>
`;
